# hestia

./: .coverage  .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CHANGELOG.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: BEHEMOTH.md  CODEBASE-REVIEW-PLAN.md  COMPETITIVE-STRATEGY.md  HESTIA-DOCTRINE.md  HUMAN-DECISIONS.md  PHASE-0.md  PHASE-1.md  SUITE-RESEARCH.md  SUITE.md  architecture.md  backup-restore.md  beta-emails.md  beta-onboarding.md  deploy-wiring.md  launch-checklist.md  launch-week1.md  operations.md  security.md  support.md
hestia/: __init__.py  ai_usage.py  albums.py  auth.py  automations.py  availability.py  billing.py  booking.py  campaigns.py  checklists.py  config.py  content.py  contracts.py  crm.py  crypto.py  csrf.py  csv_export.py  dashboard.py  db.py  delivery.py  demo.py  discounts.py  domains.py  email.py  features.py  finances.py  founder_demo.py  fulfillment.py  galleries.py  giftcards.py  growth.py  hosted.py  integrity.py  interest.py  invoices.py  jobs.py  launch.py  main.py  marketing.py  messaging.py  (+38 more)
hestia/launch/: __init__.py  actions.py  kit.py
hestia/migrations/: 0001_baseline.sql  0002_emails.sql  0003_password_resets.sql  0004_signup.sql  0005_jobs.sql  0006_subscriptions.sql  0007_contracts.sql  0008_payment_plans.sql  0009_client_portal.sql  0010_questionnaires.sql  0011_automations.sql  0012_appointments.sql  0013_gallery_proofing.sql  0014_sales_campaigns.sql  0015_automation_delays.sql  0016_orders.sql  0017_vision_deepening.sql  0018_testimonials.sql  0019_referrals.sql  0020_gallery_delivery.sql  0021_referral_rewards.sql  0022_expenses.sql  0023_invoice_reminders.sql  0024_sales_tax.sql  0025_gallery_engagement.sql  0026_client_tags.sql  0027_email_signature.sql  0028_invoice_note.sql  0029_document_reminders.sql  0030_delivery_expiry.sql  0031_project_tasks.sql  0032_message_templates.sql  0033_contract_templates.sql  0034_questionnaire_templates.sql  0035_tenant_last_digest.sql  0036_tenant_calendar_token.sql  0037_tenant_digest_enabled.sql  0038_invoice_items.sql  0039_gallery_selections_submitted.sql  0040_service_packages.sql  (+30 more)
hestia/routes/: __init__.py  admin.py  album_review.py  albums.py  api.py  automations.py  billing.py  book.py  bookings.py  checklists.py  client.py  content.py  contracts.py  crm.py  delivery.py  deps.py  discounts.py  finances.py  forms.py  galleries.py  giftcards.py  health.py  invoices.py  library.py  media.py  minisessions.py  offer_catalog.py  onboarding.py  packages.py  pay.py  payment_plans.py  pipeline_ui.py  portal.py  products.py  proposals.py  questionnaires.py  recurring.py  scheduler.py  sign.py  studio.py  (+3 more)
hestia/static/: hestia.css
hestia/templates/: _confirm.html  _launch_proof.html  _stepper.html  _tabs_documents.html  _tabs_money.html  account.html  base.html  beta.html  billing.html  client_gallery.html  dashboard.html  delivery.html  delivery_expired.html  demo.html  error.html  finances.html  finances_import.html  finances_reports.html  forgot.html  galleries.html  gallery_detail.html  gallery_new.html  interest.html  invite.html  landing.html  library.html  login.html  offer.html  offer_missing.html  onboarding.html  pipeline.html  pricing.html  reset.html  signup.html  team.html  verify_failed.html
hestia/templates/admin/: integrity.html  launch.html  login.html  onboarding.html  system.html  tenant_detail.html  tenants.html  trials.html
hestia/templates/albums/: album.html  album_review.html
hestia/templates/automations/: automation_new.html  automations.html
hestia/templates/content/: pack.html
hestia/templates/contracts/: contract_detail.html  contract_new.html  contract_templates.html  contracts.html  sign.html
hestia/templates/crm/: checklists.html  client_broadcast.html  client_detail.html  client_edit.html  client_email.html  client_new.html  client_statement.html  clients.html  clients_import.html  pipeline.html  project_detail.html  project_new.html  projects.html  search.html
hestia/templates/invoices/: invoice_detail.html  invoice_new.html  invoices.html  pay.html  receipt.html
hestia/templates/mini_sessions/: detail.html  list.html  public.html
hestia/templates/payment_plans/: plan_detail.html  plan_new.html  plans.html
hestia/templates/portal/: portal.html
hestia/templates/products/: set.html
hestia/templates/proposals/: proposal_detail.html  proposal_new.html  proposal_public.html  proposals.html
hestia/templates/questionnaires/: fill.html  questionnaire_detail.html  questionnaire_new.html  questionnaire_templates.html  questionnaires.html
hestia/templates/recurring/: recurring.html  recurring_new.html
hestia/templates/scheduler/: appointment_detail.html  appointment_new.html  block_new.html  book.html  booking_canceled.html  reschedule.html  schedule.html
requirements/: build.in  pillow-compat.in
scripts/: backup.sh  ci-smoke.sh  container-smoke.sh  coverage.sh  dogfood-hestia.sh  dogfood_hestia.py  hosted-preflight.sh  lock-dependencies.sh  offsite-sync.sh  restore-drill.sh  restore.sh  start-hestia.sh  wheel-smoke.sh
tests/: conftest.py  test_agenda.py  test_ai_subsidy.py  test_ai_usage.py  test_album_approval_lock.py  test_album_change_request.py  test_album_reorder.py  test_album_review.py  test_album_spread_editing.py  test_album_status_surfacing.py  test_albums.py  test_alt_text.py  test_app.py  test_appointment_ics.py  test_appointment_outcomes.py  test_attention_operator_loop.py  test_audit.py  test_audit2_fixes.py  test_audit_fixes.py  test_auth_context.py  test_auth_kdf.py  test_automation_booking.py  test_automation_cancel.py  test_automations.py  test_availability.py  test_beta.py  test_booking.py  test_booking_cancel.py  test_booking_reschedule.py  test_booking_rules.py  test_calendar_feed.py  test_campaigns.py  test_checklists.py  test_client_email.py  test_client_import.py  test_client_ltv.py  test_client_receipt.py  test_client_statement.py  test_client_tags.py  test_client_timeline.py  (+135 more)
(+20 files in other folders)
