[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hestia"
version = "0.1.0"
description = "Hestia — the AI-native studio operating system for photographers. An independent multi-tenant SaaS that owns the studio revenue loop: inquiry → client → gallery → AI culling → offer → invoice → paid."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Kevin Lee" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.34",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "boto3>=1.34",
    "moto[s3]>=5.0",
]

[tool.setuptools.packages.find]
include = ["hestia*"]

# Bundle the runtime resources the package reads from disk at import/boot, so a
# built wheel works as well as an editable install does.
[tool.setuptools.package-data]
hestia = ["migrations/*.sql", "templates/**/*.html", "static/*.css"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = [
    "B008", # FastAPI uses function calls in argument defaults (Depends, etc.)
    "E501", # long lines tolerated in templates/docstrings
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
