[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hestia"
version = "1.0.0"
description = "Hestia — the AI-native studio operating system for photographers. An independent multi-tenant SaaS that owns the studio revenue loop: inquiry → client → gallery → AI culling → offer → invoice → paid."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Kevin Lee" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "cryptography>=43.0.1",
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.34",
]
vision = [
    # Perceptual near-duplicate detection (burst-frame culling) uses Pillow to
    # compute a 64-bit average hash. Optional: without it the cull degrades to
    # the deterministic exact-duplicate floor. See hestia/vision.py.
    "Pillow>=10.0",
]
dev = [
    "build>=1.2",
    "setuptools>=68",
    "pip-audit>=2.10.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "uv==0.11.28",
    "boto3>=1.34",
    "moto[s3]>=5.0",
    "Pillow>=10.0",
]

[tool.setuptools.packages.find]
include = ["hestia*"]

# Bundle the runtime resources the package reads from disk at import/boot, so a
# built wheel works as well as an editable install does.
[tool.setuptools.package-data]
hestia = ["migrations/*.sql", "templates/**/*.html", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = [
    "B008", # FastAPI uses function calls in argument defaults (Depends, etc.)
    "E501", # long lines tolerated in templates/docstrings
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

# Coverage is an opt-in gate (``scripts/coverage.sh``), not the default pytest
# run, so regular ``ci-smoke`` stays fast and a coverage dip never blocks a
# launch on its own. The gate measures the revenue spine only — the modules a
# $40/mo studio lives or dies by — and is run deliberately before merge.
[tool.coverage.run]
branch = false
source = [
    "hestia/pipeline",
    "hestia/sales",
    "hestia/orders",
    "hestia/invoices",
    "hestia/payments",
    "hestia/fulfillment",
    "hestia/vision",
    "hestia/ai_usage",
    "hestia/domains",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
